fix(web): fix  sidebar header text overflow;

--- a/apps/actor-web/src/styles/sidebar.scss
+++ b/apps/actor-web/src/styles/sidebar.scss
@@ -24,11 +24,12 @@
         font-weight: 500;
         line-height: 32px;
 
-        display: inline-block;
+        overflow-x: hidden;
 
         margin: 14px 0;
 
         vertical-align: middle;
+        text-overflow: ellipsis;
 
         color: ghostwhite;
       }
